5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4471/executions/1573_1332.log
== TEST (2019-03-27 15:38:26) 
-- CODE:
aresta =(6*5)
area =3/2*3**0.5*a**2
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2*3**0.5*a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:40:01) 
-- CODE:
aresta =(5)
area =3/2*3**0.5*a**2
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2*3**0.5*a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:40:23) 
-- CODE:
aresta =(6*5)
area =(3/2*3**0.5*a**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =(3/2*3**0.5*a**2)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:40:41) 
-- CODE:
aresta =(6*5)
area =(3/2*3**0.5*5**2)
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:40:51) 
-- CODE:
aresta =(6*5)
area =(3/2*3**0.5*5**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.145192
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
